# pixel-twins

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md
docs/: background_asset_binary.md  controller.md  font_converter.md  framebuffer.md  rendering.md  rp2350_port.md  sound.md  sprite_asset_binary.md
examples/framebuffer/: CMakeLists.txt  main.cpp
examples/rp2350/: CMakeLists.txt  main.cpp
include/pixel_twins/: audio_system.hpp  background.hpp  background_asset.hpp  controller.hpp  font.hpp  framebuffer.hpp  platform.hpp  primitives.hpp  render_target.hpp  sequencer.hpp  sound.hpp  sound_waves.hpp  sprite.hpp  sprite_asset.hpp
platform/rp2350/: CMakeLists.txt
platform/sdl/: CMakeLists.txt  sdl_audio.cpp  sdl_controller.cpp  sdl_presenter.cpp
platform/sdl/include/pixel_twins/: sdl_audio.hpp  sdl_controller.hpp  sdl_presenter.hpp
src/: audio_system.cpp  background.cpp  background_asset.cpp  controller.cpp  font.cpp  framebuffer.cpp  primitives.cpp  render_target.cpp  sequencer.cpp  sound.cpp  sound_waves.cpp  sprite.cpp  sprite_asset.cpp
tests/: CMakeLists.txt  audio_system_test.cpp  background_asset_test.cpp  background_test.cpp  controller_test.cpp  font_test.cpp  framebuffer_test.cpp  primitives_test.cpp  sequencer_test.cpp  sound_test.cpp  sprite_asset_test.cpp  sprite_test.cpp  test_check.hpp
tools/: font_converter.py  font_converter_test.py  sequence_converter.py  sfx_converter.py
tools/asset_converter/: .gitignore  README.md  pyproject.toml
tools/asset_converter/examples/: palette-set.json
tools/asset_converter/src/pixel_twins_asset_converter/: __init__.py  background_cli.py  background_pack.py  cli.py  manifest.py  palette.py  pipeline.py  raw_image.py  raw_image_cli.py  report.py  sprite_cli.py  sprite_pack.py
tools/asset_converter/tests/: test_background_pack.py  test_pipeline.py  test_raw_image.py  test_sprite_pack.py
